tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/rawstring-del.stderr
TOML parse error at line 1, column 23
  |
1 | rawstring-del  = 'null'
  |                       ^
invalid literal string
